lib_LTLIBRARIES = libfrog.la
libfrog_la_LDFLAGS = -version-info 0:1:0
libfrog_la_SOURCES = Object.cpp AddressFamily.cpp InetAddress.cpp IPEndpoint.cpp
nobase_include_HEADERS = frog/Object.h frog/Singleton.h frog/AddressFamily.h \
						 frog/ArgumentNullException.h frog/ArgumentOutOfBoundsException.h \
						 frog/ArithmeticException.h frog/DivideByZeroException.h \
						 frog/Exception.h frog/FormatException.h frog/IllegalArgumentException.h \
						 frog/InetAddress.h frog/IOException.h frog/NotImplementedException.h \
						 frog/NullPointerException.h frog/OverflowException.h frog/RuntimeException.h \
						 frog/SystemException.h frog/Endpoint.h frog/IPEndpoint.h
