lib_LTLIBRARIES = libfrog.la
INCLUDES = $(all_includes)
libfrog_la_LDFLAGS = -version-info 0:1:0 $(all_libraries)
libfrog_la_SOURCES = Object.cpp AddressFamily.cpp InetAddress.cpp IPEndpoint.cpp NetworkInterface.cpp
nobase_include_HEADERS = frog/Object.h frog/Singleton.h frog/AddressFamily.h \
						 frog/ArgumentNullException.h frog/ArgumentOutOfBoundsException.h \
						 frog/ArithmeticException.h frog/DivideByZeroException.h \
						 frog/Exception.h frog/FormatException.h frog/IllegalArgumentException.h \
						 frog/InetAddress.h frog/IOException.h frog/NotImplementedException.h \
						 frog/NullPointerException.h frog/OverflowException.h frog/RuntimeException.h \
						 frog/SystemException.h frog/SocketException.h frog/Endpoint.h frog/IPEndpoint.h \
						 frog/NetworkInterface.h frog/nullptr.h frog/stdint.h
